tests/integration/snapshots/integration__toml__unknown_toml_field.snap
---
source: tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Failed to parse /tmp/.tmpR0QctH/flir.toml:
TOML parse error at line 4, column 1
  |
4 | unknown_field = ["value"]
  | ^^^^^^^^^^^^^
unknown field `unknown_field`, expected `select` or `ignore`


----- args -----
.
